# compile_principle_lab

./: .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  cmm.l  cmm.tab.c  cmm.tab.h  cmm.y  intern.cpp  intern.hpp  lex.yy.c  lex.yy.h  main.c  main.cpp  semantic.cpp  semantic.h
input/: 1-1.cmm  1-2.cmm  1-5.cmm  1-9.cmm  test.cmm  test2.cmm
input/lab1/: 1-1.cmm  1-10.cmm  1-4.cmm  1-8.cmm  test2.cmm
input/lab2/: 1.cmm  10.cmm  11.cmm  12.cmm  13.cmm  14.cmm  15.cmm  16.cmm  17.cmm  18.cmm  19.cmm  2.cmm  20.cmm  21.cmm  22.cmm  23.cmm  3.cmm  4.cmm  5.cmm  6.cmm  7.cmm  8.cmm  9.cmm
input/lab3/: 1.cmm  2.cmm  4.cmm  5.cmm
report/: exp1.md  exp2.md
